--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -11,12 +11,12 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    max-width: 70vw;
+    max-width: 40vw;
 }
 
 .slider-img {
-    width: 30vw;
-    height: 40vh;
+    width: 40vw;
+    height: 50vh;
 }
 
 .slider-nav {
@@ -30,10 +30,20 @@ body {
 }
 
 label {
+    position: relative;
     background: #ffae2b;
     border-radius: 100%;
     width: 3vh;
     height: 3vh;
+}
+
+label::after {
+    position: absolute;
+    content: "";
+    top: -3vh;
+    right: -3vh;
+    left: -3vh;
+    bottom: -3vh;
 }
 
 label:hover {
@@ -52,13 +62,15 @@ label:hover {
     display: flex;
     justify-self: center;
     overflow: hidden;
-    width: 30vw;
+    width: 40vw;
     grid-column: 1 / span 2;
-    margin: 5vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
 }
 
 .slider-container {
     display: flex;
+    transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
 .text-wrapper {
@@ -71,19 +83,20 @@ label:hover {
 .text-container {
     display: flex;
     flex-direction: column;
+    transition: margin-top 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
 #slide1:checked ~ .slider-wrapper > .slider-container {
     margin-left: 0;
 }
 #slide2:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-30vw);
+    margin-left: calc(-40vw);
 }
 #slide3:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-30vw*2);
+    margin-left: calc(-40vw*2);
 }
 #slide4:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-30vw*3);
+    margin-left: calc(-40vw*3);
 }
 
 #slide1:checked ~ .text-wrapper > .text-container {
