--- a/cssMemSlider/style.css
+++ b/cssMemSlider/style.css
@@ -11,12 +11,12 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    max-width: 40vw;
+    max-width: 60vw;
 }
 
 .slider-img {
-    width: 40vw;
-    height: 50vh;
+    width: 60vw;
+    height: 70vh;
 }
 
 .slider-nav {
@@ -26,35 +26,38 @@ body {
 .controls {
     display: flex;
     justify-content: right;
-    gap: 2vw;
+    gap: 3vw;
 }
 
 label {
-    position: relative;
+    width: 6vh;
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -1vh;
+}
+
+label:hover {
+    cursor: pointer;
+}
+
+label:hover .control-point {
+    cursor: pointer;
+    box-shadow: 0 0 6px 8px #dcdcdc;
+}
+
+.control-point {
     background: #ffae2b;
     border-radius: 100%;
     width: 3vh;
     height: 3vh;
 }
 
-label::after {
-    position: absolute;
-    content: "";
-    top: -3vh;
-    right: -3vh;
-    left: -3vh;
-    bottom: -3vh;
-}
-
-label:hover {
-    cursor: pointer;
-    box-shadow: 0 0 8px 8px #939393;
-}
-
-#slide1:checked ~ .controls label:nth-child(1),
-#slide2:checked ~ .controls label:nth-child(2),
-#slide3:checked ~ .controls label:nth-child(3),
-#slide4:checked ~ .controls label:nth-child(4) {
+#slide1:checked ~ * [for="slide1"] > .control-point,
+#slide2:checked ~ * [for="slide2"] > .control-point,
+#slide3:checked ~ * [for="slide3"] > .control-point,
+#slide4:checked ~ * [for="slide4"] > .control-point{
     background: #1eff00;
 }
 
@@ -62,7 +65,7 @@ label:hover {
     display: flex;
     justify-self: center;
     overflow: hidden;
-    width: 40vw;
+    width: 60vw;
     grid-column: 1 / span 2;
     margin-top: 5vh;
     margin-bottom: 5vh;
@@ -75,6 +78,7 @@ label:hover {
 
 .text-wrapper {
     display: flex;
+    white-space: nowrap;
     overflow: hidden;
     height: 26px;
     font-size: 24px;
@@ -90,13 +94,13 @@ label:hover {
     margin-left: 0;
 }
 #slide2:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-40vw);
+    margin-left: calc(-60vw);
 }
 #slide3:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-40vw*2);
+    margin-left: calc(-60vw*2);
 }
 #slide4:checked ~ .slider-wrapper > .slider-container {
-    margin-left: calc(-40vw*3);
+    margin-left: calc(-60vw*3);
 }
 
 #slide1:checked ~ .text-wrapper > .text-container {
@@ -110,4 +114,103 @@ label:hover {
 }
 #slide4:checked ~ .text-wrapper > .text-container {
     margin-top: calc(-28px*3);
+}
+
+@media only screen and (max-width: 850px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+        max-width: 40vw;
+    }
+
+    .slider-wrapper {
+        grid-column: 1 / 1;
+        width: 40vw;
+    }
+
+    .controls {
+        grid-row: -1 / 3;
+        margin-bottom: 3vh;
+        justify-content: center;
+    }
+
+    .slider-img {
+        max-height: 35vh;
+        max-width: 40vw;
+    }
+
+    label {
+        margin: 0;
+    }
+
+    .control-point {
+        width: 2vh;
+        height: 2vh;
+    }
+
+    #slide1:checked ~ .slider-wrapper > .slider-container {
+        margin-left: 0;
+    }
+    #slide2:checked ~ .slider-wrapper > .slider-container {
+        margin-left: calc(-40vw);
+    }
+    #slide3:checked ~ .slider-wrapper > .slider-container {
+        margin-left: calc(-40vw*2);
+    }
+    #slide4:checked ~ .slider-wrapper > .slider-container {
+        margin-left: calc(-40vw*3);
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    .wrapper {
+        max-width: 60vw;
+    }
+    
+    .slider-img {
+        max-width: 60vw;
+    }
+
+    .slider-wrapper {
+        width: 60vw;
+    }
+
+    .text-wrapper {
+        width: 60vw;
+        font-size: 16px;
+        height: 18px;
+    }
+
+    #slide1:checked ~ .text-wrapper > .text-container {
+        margin-top: 0;
+    }
+    #slide2:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-19px);
+    }
+    #slide3:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-19px*2);
+    }
+    #slide4:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-19px*3);
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .text-wrapper {
+        font-size: 12px;
+        height: 14px;
+    }
+
+    #slide1:checked ~ .text-wrapper > .text-container {
+        margin-top: 0;
+    }
+    #slide2:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-15px);
+    }
+    #slide3:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-15px*2);
+    }
+    #slide4:checked ~ .text-wrapper > .text-container {
+        margin-top: calc(-15px*3);
+    }
 }
